--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </style>
 </head>
 <body>
+    <a href="receita.html">Adicionar sua receita.</a>
   <h2>Ovo Frito Crocante com Queijo Parmesão e Ervas:</h2>
     <table>
         <tr>
